Refactor: Update content and options across the create service flow pages. closes #1

--- a/app/views/create-service/confirm.html
+++ b/app/views/create-service/confirm.html
@@ -1,124 +1,96 @@
 {% extends "layouts/main.html" %}
 
 {% block pageTitle %}
-  Check your answers template – {{ serviceName }} – GOV.UK Prototype Kit
+Check your answers template – {{ serviceName }} – GOV.UK Prototype Kit
 {% endblock %}
 
 {% block beforeContent %}
-  {{ govukBackLink({
-    text: "Back",
-    href: "javascript:window.history.back()"
-  }) }}
+{{ govukBackLink({
+text: "Back",
+href: "javascript:window.history.back()"
+}) }}
 {% endblock %}
 
 {% block content %}
-  <div class="govuk-grid-row">
-    <div class="govuk-grid-column-two-thirds-from-desktop">
+<div class="govuk-grid-row">
+  <div class="govuk-grid-column-two-thirds-from-desktop">
 
-      <h1 class="govuk-heading-xl">
-        Check these details before creating your service
-      </h1>
+    <h1 class="govuk-heading-xl">
+      Check your answers
+    </h1>
 
-      <dl class="govuk-summary-list">
-        <div class="govuk-summary-list__row">
-          <dt class="govuk-summary-list__key">
-            Service Name
-          </dt>
-          <dd class="govuk-summary-list__value">
-            {{data['clientName']}}
-          </dd>
-          <dd class="govuk-summary-list__actions">
-            <a class="govuk-link" href="/create-service/enter-client-name">Change<span class="govuk-visually-hidden"> name</span></a>
-          </dd>
-        </div>
-        <div class="govuk-summary-list__row">
-          <dt class="govuk-summary-list__key">
-            Public key type
-          </dt>
-          <dd class="govuk-summary-list__value">
-            {{data['publicKeyType']}}
-          </dd>
-          <dd class="govuk-summary-list__actions">
-            <a class="govuk-link" href="/create-service/select-key-type">Change<span class="govuk-visually-hidden"> public key type</span></a>
-          </dd>
-        </div>
-        {% if data['publicKeyType'] === 'Client Secret' %}
-        <div class="govuk-summary-list__row">
-          <dt class="govuk-summary-list__key">
-            Client Secret
-          </dt>
-          <dd class="govuk-summary-list__value">
-            {{data['clientSecret']}}
-          </dd>
-          <dd class="govuk-summary-list__actions">
-            <a class="govuk-link" href="/create-service/select-key-type">Change<span class="govuk-visually-hidden"> client secret</span></a>
-          </dd>
-        </div> 
-        {% endif %}
-        {% if data['publicKeyType'] === 'Static Key' %}
-        <div class="govuk-summary-list__row">
-          <dt class="govuk-summary-list__key">
-            Static Key
-          </dt>
-          <dd class="govuk-summary-list__value">
-            {{data['staticKey']}}
-          </dd>
-          <dd class="govuk-summary-list__actions">
-            <a class="govuk-link" href="/create-service/select-key-type">Change<span class="govuk-visually-hidden"> static key</span></a>
-          </dd>
-        </div> 
-        {% endif %}
-        <div class="govuk-summary-list__row">
-          <dt class="govuk-summary-list__key">
-            Redirect url(s)
-          </dt>
-          <dd class="govuk-summary-list__value">
-            {% set urlList = data['redirectUrls'].split(',') %}
-            {% for url in urlList %}
-              {{ url | trim }}<br>
-            {% endfor %}
-          </dd>
-          <dd class="govuk-summary-list__actions">
-            <a class="govuk-link" href="/create-service/redirect-urls">Change<span class="govuk-visually-hidden"> scopes</span></a>
-          </dd>
-        </div>
-        <div class="govuk-summary-list__row">
-          <dt class="govuk-summary-list__key">
-            Scopes
-          </dt>
-          <dd class="govuk-summary-list__value">
-            {{data['selectedScopes'].join(', ')}}
-          </dd>
-          <dd class="govuk-summary-list__actions">
-            <a class="govuk-link" href="/create-service/select-scopes">Change<span class="govuk-visually-hidden"> scopes</span></a>
-          </dd>
-        </div>
-      </dl>
+    {% set summaryListRows = [] %}
 
-      <form action="/confirmation" method="post" novalidate>
+    {% set summaryListRows = (summaryListRows.push({
+    key: { text: "Service name" },
+    value: { text: data['clientName'] },
+    actions: { items: [{ href: "/create-service/enter-client-name", text: "Change", visuallyHiddenText: "service name"
+    }] }
+    }), summaryListRows) %}
 
+    {% set summaryListRows = (summaryListRows.push({
+    key: { text: "Authentication method" },
+    value: { text: data['publicKeyType'] },
+    actions: { items: [{ href: "/create-service/select-key-type", text: "Change", visuallyHiddenText: "authentication
+    method" }] }
+    }), summaryListRows) %}
+
+    {% if data['publicKeyType'] === 'Client secret' %}
+    {% set summaryListRows = (summaryListRows.push({
+    key: { text: "Client secret" },
+    value: { text: data['clientSecret'] },
+    actions: { items: [{ href: "/create-service/select-key-type", text: "Change", visuallyHiddenText: "client secret" }]
+    }
+    }), summaryListRows) %}
+    {% endif %}
+
+    {% if data['publicKeyType'] === 'Fixed public key' %}
+    {% set summaryListRows = (summaryListRows.push({
+    key: { text: "Fixed public key" },
+    value: { text: data['staticKey'] },
+    actions: { items: [{ href: "/create-service/select-key-type", text: "Change", visuallyHiddenText: "fixed public key"
+    }] }
+    }), summaryListRows) %}
+    {% endif %}
+
+    {% set summaryListRows = (summaryListRows.push({
+    key: { text: "Redirect URLs" },
+    value: { html: data['redirectUrls'] | replace(',', '<br>') | safe },
+    actions: { items: [{ href: "/create-service/redirect-urls", text: "Change", visuallyHiddenText: "redirect URLs" }] }
+    }), summaryListRows) %}
+
+    {% set summaryListRows = (summaryListRows.push({
+    key: { text: "Scopes" },
+    value: { text: data['selectedScopes'] | join(', ') if data['selectedScopes'] else 'None' },
+    actions: { items: [{ href: "/create-service/select-scopes", text: "Change", visuallyHiddenText: "scopes" }] }
+    }), summaryListRows) %}
+
+    {{ govukSummaryList({
+    rows: summaryListRows
+    }) }}
+
+    <h2 class="govuk-heading-m">Now create your service</h2>
+
+    <form action="/confirmation" method="post" novalidate>
+
+      <div class="govuk-button-group">
         {{ govukButton({
-          text: "Create"
+        text: "Create service"
         }) }}
 
-      </form>
-
-      <form action="/confirmation" method="post" novalidate>
-
         {{ govukButton({
-          text: "Add identity journey configuration"
+        text: "Add identity journey configuration",
+        classes: "govuk-button--secondary"
         }) }}
 
-      </form>
-
-      <form action="/confirmation" method="post" novalidate>
-
         {{ govukButton({
-          text: "Add additional configuration"
+        text: "Add additional configuration",
+        classes: "govuk-button--secondary"
         }) }}
+      </div>
 
-      </form>
+    </form>
 
-    </div>
   </div>
+</div>
 {% endblock %}
