--- a/app/views/create-service/enter-client-name.html
+++ b/app/views/create-service/enter-client-name.html
@@ -1,44 +1,42 @@
 {% extends "layouts/main.html" %}
 
 {% block pageTitle %}
-  Question page template – {{ serviceName }} – GOV.UK Prototype Kit
+Question page template – {{ serviceName }} – GOV.UK Prototype Kit
 {% endblock %}
 
 {% block beforeContent %}
-  {{ govukBackLink({
-  text: "Back",
-  href: "javascript:window.history.back()"
+{{ govukBackLink({
+text: "Back",
+href: "javascript:window.history.back()"
 }) }}
 {% endblock %}
 
 {% block content %}
 
-  <div class="govuk-grid-row">
-    <div class="govuk-grid-column-two-thirds">
-      <form class="form" action="/create-service/select-key-type" method="post">
-        <p>
-          {{ govukInput({
-            label: {
-              text: "Enter your service name",
-              classes: "govuk-label--l",
-              isPageHeading: true
-            }, 
-            hint: {
-              text: "Use a descriptive name, avoiding acronyms"
-            },
-            id: "client-name",
-            name: "clientName",
-            value: data['clientName']
-          }) }}
-        </p>
+<div class="govuk-grid-row">
+  <div class="govuk-grid-column-two-thirds">
+    <form class="form" action="/create-service/select-key-type" method="post">
+      {{ govukInput({
+      label: {
+      text: "What is the name of your service?",
+      classes: "govuk-label--l",
+      isPageHeading: true
+      },
+      hint: {
+      text: "Your users will see this name when they sign in with GOV.UK One Login."
+      },
+      id: "client-name",
+      name: "clientName",
+      value: data['clientName']
+      }) }}
 
-        {{ govukButton({
-          text: "Continue"
-        }) }}
+      {{ govukButton({
+      text: "Continue"
+      }) }}
 
-      </form>
+    </form>
 
-    </div>
   </div>
+</div>
 
 {% endblock %}
