--- a/app/views/create-service/redirect-urls.html
+++ b/app/views/create-service/redirect-urls.html
@@ -1,42 +1,42 @@
 {% extends "layouts/main.html" %}
 
 {% block pageTitle %}
-  Question page template – {{ serviceName }} – GOV.UK Prototype Kit
+Question page template – {{ serviceName }} – GOV.UK Prototype Kit
 {% endblock %}
 
 {% block beforeContent %}
-  {{ govukBackLink({
-  text: "Back",
-  href: "javascript:window.history.back()"
+{{ govukBackLink({
+text: "Back",
+href: "javascript:window.history.back()"
 }) }}
 {% endblock %}
 
 {% block content %}
 
-  <div class="govuk-grid-row">
-    <div class="govuk-grid-column-two-thirds">
-      <form class="form" action="/create-service/select-scopes" method="post">
+<div class="govuk-grid-row">
+  <div class="govuk-grid-column-two-thirds">
+    <form class="form" action="/create-service/select-scopes" method="post">
 
-        {{ govukTextarea({
-          name: "redirectUrls",
-          id: "redirect-urls",
-          label: {
-            text: "Add redirect url",
-            classes: "govuk-label--l",
-            isPageHeading: true
-          },
-          hint: {
-            text: "If you wish to add multiple, please separate with a comma"
-          }
-        }) }}
+      {{ govukTextarea({
+      name: "redirectUrls",
+      id: "redirect-urls",
+      label: {
+      text: "Redirect URLs",
+      classes: "govuk-label--l",
+      isPageHeading: true
+      },
+      hint: {
+      text: "Enter the URLs where users will be sent after signing in. Separate multiple URLs with a comma."
+      }
+      }) }}
 
-        {{ govukButton({
-          text: "Continue"
-        }) }}
+      {{ govukButton({
+      text: "Continue"
+      }) }}
 
-      </form>
+    </form>
 
-    </div>
   </div>
+</div>
 
 {% endblock %}
