--- a/app/views/create-service/select-scopes.html
+++ b/app/views/create-service/select-scopes.html
@@ -1,63 +1,66 @@
 {% extends "layouts/main.html" %}
 
 {% block pageTitle %}
-  Question page template – {{ serviceName }} – GOV.UK Prototype Kit
+Question page template – {{ serviceName }} – GOV.UK Prototype Kit
 {% endblock %}
 
 {% block beforeContent %}
-  {{ govukBackLink({
-  text: "Back",
-  href: "javascript:window.history.back()"
+{{ govukBackLink({
+text: "Back",
+href: "javascript:window.history.back()"
 }) }}
 {% endblock %}
 
 {% block content %}
 
-  <div class="govuk-grid-row">
-    <div class="govuk-grid-column-two-thirds">
-      <form class="form" action="/create-service/confirm" method="post">
+<div class="govuk-grid-row">
+  <div class="govuk-grid-column-two-thirds">
+    <form class="form" action="/create-service/confirm" method="post">
 
-        <p>
-          {{ govukCheckboxes({
-            name: "selectedScopes",
-            fieldset: {
-              legend: {
-                text: "Which scopes would you like to send?",
-                isPageHeading: true,
-                classes: "govuk-fieldset__legend--l"
-              }
-            },
-            hint: {
-              text: "Select all that apply"
-            },
-            items: [
-              {
-                value: "Openid",
-                text: "Openid"
-              },
-              {
-                value: "Email address",
-                text: "Email address"
-              },
-              {
-                value: "Phone number",
-                text: "Phone number"
-              },
-              {
-                value: "Wallet subject ID",
-                text: "Wallet subject ID"
-              }
-            ]
-          }) }}
-        </p>
+      {{ govukCheckboxes({
+      name: "selectedScopes",
+      fieldset: {
+      legend: {
+      text: "What user information do you need?",
+      isPageHeading: true,
+      classes: "govuk-fieldset__legend--l"
+      }
+      },
+      hint: {
+      text: "Select all that apply."
+      },
+      items: [
+      {
+      value: "openid",
+      text: "OpenID",
+      checked: true,
+      disabled: true,
+      hint: {
+      text: "Required to sign in users"
+      }
+      },
+      {
+      value: "email",
+      text: "Email address"
+      },
+      {
+      value: "phone",
+      text: "Phone number"
+      },
+      {
+      value: "Wallet subject ID",
+      text: "Wallet subject ID"
+      }
+      ]
+      }) }}
 
-        {{ govukButton({
-          text: "Continue"
-        }) }}
+      {{ govukButton({
+      text: "Continue"
+      }) }}
 
-      </form>
+    </form>
 
-    </div>
   </div>
+</div>
 
 {% endblock %}
