--- a/app/views/create-service/start-page.html
+++ b/app/views/create-service/start-page.html
@@ -1,72 +1,68 @@
 {% extends "layouts/main.html" %}
 
 {% block pageTitle %}
-  Start page template – {{ serviceName }} – GOV.UK Prototype Kit
+Start page template – {{ serviceName }} – GOV.UK Prototype Kit
 {% endblock %}
 
 {% block header %}
-  <!-- Blank header with no service name for the start page -->
-  {{ govukHeader() }}
+<!-- Blank header with no service name for the start page -->
+{{ govukHeader() }}
 {% endblock %}
 
 {% block beforeContent %}
 
-  {{ govukBreadcrumbs({
-    items: [
-      {
-        text: "Home",
-        href: "/"
-      },
-      {
-        text: "Create a service"
-      }
-    ]
-  }) }}
+{{ govukBreadcrumbs({
+items: [
+{
+text: "Home",
+href: "/"
+},
+{
+text: "Create a service"
+}
+]
+}) }}
 
 {% endblock %}
 
 {% block content %}
 
-  <div class="govuk-grid-row">
-    <div class="govuk-grid-column-two-thirds">
+<div class="govuk-grid-row">
+  <div class="govuk-grid-column-two-thirds">
 
-      <h1 class="govuk-heading-xl">
-        {{ serviceName }}
-      </h1>
+    <h1 class="govuk-heading-xl">
+      {{ serviceName }}
+    </h1>
 
-      <p>Use this service to:</p>
+    <p>Use this service to:</p>
 
-      <ul class="govuk-list govuk-list--bullet">
-        <li>do something</li>
-        <li>update your name, address or other details</li>
-        <li>do something else</li>
-      </ul>
+    <ul class="govuk-list govuk-list--bullet">
+      <li>create a configuration for your service</li>
+      <li>get a unique Client ID</li>
+      <li>set up your redirect URLs and scopes</li>
+    </ul>
 
-      <p>Registering takes around 5 minutes.</p>
+    <p>Registering takes around 5 minutes.</p>
 
-      {{ govukButton({
-        text: "Start now",
-        href: "/create-service/enter-client-name.html",
-        isStartButton: true
-      }) }}
+    {{ govukButton({
+    text: "Start now",
+    href: "/create-service/enter-client-name",
+    isStartButton: true
+    }) }}
 
-      <h2 class="govuk-heading-m">
-        Before you start
-      </h2>
+    <h2 class="govuk-heading-m">
+      Before you start
+    </h2>
 
-      <p>
-        You can also <a href="#">register by post</a>.
-      </p>
+    <p>
+      You will need:
+    </p>
+    <ul class="govuk-list govuk-list--bullet">
+      <li>a government email address</li>
+      <li>a mobile phone</li>
+    </ul>
 
-      <p>
-        The online service is also <a href="#">available in Welsh (ar gael yn Gymraeg)</a>.
-      </p>
-
-      <p>
-        You can’t register for this service if you’re in the UK illegally.
-      </p>
-
-    </div>
   </div>
+</div>
 
 {% endblock %}
